<resources>
    <string name="app_name">Jobs4U</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="searchbar_hint">Search jobs that fits for you</string>
    <string name="username">username</string>
    <string name="shared_image_transition">shared_image_transition_%1$d</string>
    <string name="error_new_password_not_match">Your new password didn\'t match</string>
    <string name="error_password_not_match">Your password didn\'t match</string>
    <string name="error_password_empty">Can\'t be empty</string>
    <string name="change_password_confirmation_message">Are you sure to change your password?</string>
    <string name="cancel">Cancel</string>
    <string name="change_password_confirm">Change Password</string>
    <string name="register_in_login">New to Jobs4U? <b>Register here</b></string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="login_in_register">Joined us before? <b>Login</b></string>
    <string name="error_unvalid_email">Not a valid e-mail</string>
    <string name="app_version">Jobs4U v%1s</string>
    <string name="register_success">Registered successfully</string>
    <string name="filters">%1s %2s %3s %4s</string>
    <string name="query">%1s %2s</string>
    <string-array name="work_types">
        <item>Work From Office (WFO)</item>
        <item>Hybird</item>
        <item>Work From Home (WFH)</item>
    </string-array>
    <string-array name="job_types">
        <item>Full time</item>
        <item>Contract</item>
        <item>Internship</item>
    </string-array>
    <string-array name="experience_level">
        <item>Internship</item>
        <item>Junior</item>
        <item>Mid</item>
        <item>Senior</item>
    </string-array>
</resources>