<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home"
    android:id="@+id/main_navigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ahimsarijalu.jobs4u.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_saved"
        android:name="com.ahimsarijalu.jobs4u.ui.saved.SavedFragment"
        android:label="@string/saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ahimsarijalu.jobs4u.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>